<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/navi_add_card_all"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/notify_add_item_bg"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">
        <RelativeLayout
            android:id="@+id/card_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/notify_add_item_tips"
            >
            <TextView
                android:id="@+id/notify_add"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/notify_add"
                android:textSize="13sp"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/notify_card_add_sel"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/notify_cancle"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/notify_skipped"
                android:gravity="center"
                android:textSize="13sp"
                android:layout_toLeftOf="@id/notify_add"
                android:layout_marginTop="5dp"
                android:background="@drawable/notify_card_add_sel"
                android:textColor="@color/notify_skip_color"/>



            <TextView
                android:id="@+id/notify_tips_user_count"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/notify_recommend_tips_count"
                android:textSize="13sp"
                android:textColor="#FFC52D"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/notify_tips"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/notify_recommend_tips"
                android:textSize="13sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_toRightOf="@id/notify_tips_user_count" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
