<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
   	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#b0000000">
   	    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" 
        android:background="@drawable/searchbox_bg_titlebar"
        android:padding="0dp">
        
        <!-- 
        <ImageView android:id="@+id/btnBack"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/searchbox_btn_back"/>
         -->
         
        <TextView android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/searchbox_title_text_size"
            android:textColor="@color/searchbox_title_text_color"
            android:text="@string/searchbox_title_voice_result"/>
        
    </LinearLayout>
	    
    <LinearLayout android:background="@drawable/searchbox_bg_body"
	    android:orientation="vertical"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:padding="5dp">
	    
	    <!-- 
	    <TextView android:id="@+id/txtSubtitle" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/black"
	        android:textSize="15sp"
	        android:paddingLeft="15dp"
	        android:paddingTop="5dp"
	        />
	    -->
	    
	    <!-- content area -->
		<ListView 
		    android:id="@+id/voiceRecoResultList"
		    android:layout_weight="1"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:listSelector="@drawable/myphone_click_item_blue"
		    android:divider="@drawable/myphone_common_split" 
		    android:dividerHeight="1dip"
			android:cacheColorHint="#00000000"
			android:minHeight="33dp"
			android:padding="15dp"
			/>
		
		<!-- bottom -->
		<LinearLayout 
		    android:layout_width="match_parent" 
			android:layout_height="50dp" 
			android:orientation="horizontal">
			
		  	<TextView android:id="@+id/btnCancel"
			    android:layout_width="0dp" 
			    android:layout_height="match_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:textColor="#000000"
			    android:textSize="20sp"
			    android:background="@drawable/app_choose_btn"
			    android:text="@string/common_button_cancel" />
		    
		    <TextView android:id="@+id/btnRetry"
			    android:layout_width="0dp" 
			    android:layout_height="match_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:textColor="#000000"
			    android:textSize="20sp"
			    android:background="@drawable/app_choose_btn"
			    android:text="@string/searchbox_retry" />
		    
		</LinearLayout>
	</LinearLayout>
	
</LinearLayout>